@@ -185,7 +185,7 @@ A:hover	{ color: #C0C0C0; }
 	{
 	  font-size: 12px;
 	  font-weight: bold;
-	  color: #404040;	  
+	  color: #BBBBBB;	  
 	}
 .editlink,  /* Used for the [edit] tags */
 .editlink a,
