@@ -1,3 +1,11 @@
+2003-11-27  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b37
+
+	* Turn on error display (if off) in devMode.
+
+	* Fixed incorrect warning in check_mail.php under windows.
+
+	* Colour of font changed in redmarble skin.
+
 2003-11-26 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b36
 
 	* Change: Removed debug code.
